services/k8s/readeck/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readeck-test-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: readeck
  type: NodePort
